react-express-mongodb/k8s/deployment-be.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: sedadede9650/be:proje
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            cpu: "0.1"
            memory: "128Mi"
        ports:
        - containerPort: 3005

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 3005
    targetPort: 3005
