react-express-mongodb/k8s/deployment-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: sedadede9650/db:proje
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            cpu: "0.1"
            memory: "128Mi"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: persistent-storage
          mountPath: /data/db
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: ebs-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017

---
